2009-02-13  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: fixed type output issues in the c#
	  ambience.

2009-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs:
	* Parser/NRefactoryParser.cs:
	* CSharpBindingCompilerManager.cs: Track API changes. Use the
	  new ProjectItem collection.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed test case 470954_bis

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 474447 - Wrong
	  completion of namespaces".

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Optimized ResolveIdentifier and
	  prevented endless loop.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 470954 - using
	  System.Windows.Forms is not honored".

2009-02-10  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/MemberCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: Fixed "Bug 350862 -
	  Autocomplete bug with enums".

2009-02-10  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed small namespace access bug.

2009-02-10  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: worked on is/as
	  completion.

2009-02-10  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs:
	* Gui/CSharpTextEditorCompletion.cs: Added new "<Type> x = y
	  as $" completion case.

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: now using
	  IsAccessibleFrom for constructor accessible tests (for more
	  complex cases than bug 473849).


2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 473849 -
	  Classes with no visible constructor shouldn't appear in
	  "new" completion".

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 473686 - Constants are
	  not included in code completion".
