@@ -1,3 +1,8 @@
+2009-02-16  Mike Krüger  <mkrueger@novell.com>
+
+	* Parser/FindMemberAstVisitor.cs: Fixed "Bug 391066 - Rename
+	  not offered for generic classes".
+
 2009-02-13  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/CSharpAmbience.cs: fixed type output issues in the c#
